This patch modifies Krusader's item selection behaviour. It enables Krusader to select previously focused item when no other items are already selected.

For this to work (and to reuse existing code) I've modified KrView's method "getSelectedItems" to accept a bool flag to optionally return selected-only items (without the focused one).

REVIEW: 127439
BUG: 270142